tests/type_errors/string_in_arithmetic.nos
# expect_error: does not implement Num
# Test: using String in arithmetic operation

main() = {
    x = "hello"
    y = x + 1
    y
}
